Remove deprecated methods, restructure (#219)